# tic-tac

./: .gitignore  README.md  tic-tac.txt
codigo/: CMakeLists.txt  envia_horario.py
codigo/include/: stepper.hpp
codigo/main/: main.cpp
codigo/src/: stepper.cpp
